--- a/index.scss
+++ b/index.scss
@@ -1,1 +1,28 @@
-@import './node_modules/reset-css/reset.css'
+@import './node_modules/reset-css/reset.css';
+
+.header{
+    width: 100%;
+    max-height: 200px;
+    padding: 15px 45px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .logo__container{
+        height: 100%;
+        img{
+            height: 60px
+        }
+    }
+
+    .nav__items{
+        display: flex;
+        ul{
+            display: flex;
+            list-style: none;
+            li{
+                padding: 0 16px;
+                font-size: 24px;
+            }
+        }
+    }
+}
