--- a/index.scss
+++ b/index.scss
@@ -1,5 +1,4 @@
 @import './node_modules/reset-css/reset.css';
-
 .header{
     width: 100%;
     max-height: 200px;
@@ -7,13 +6,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: gainsboro;
     .logo__container{
         height: 100%;
         img{
             height: 60px
         }
     }
-
     .nav__items{
         display: flex;
         ul{
@@ -22,6 +21,37 @@
             li{
                 padding: 0 16px;
                 font-size: 24px;
+            }
+        }
+    }
+}
+#body{
+    width: 100%;
+    margin-top: 80px;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+
+    .search{
+        margin: 32px 0;
+    }
+
+    .cards__container{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        .order-card{
+            width: 250px;
+            height: 300px;
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+            border-radius: 6px;
+            padding: 8px;
+            // margin: 0 8px;
+            img{
+                width: 100%;
+                height: 175px;
+                object-fit: cover;
             }
         }
     }
