--- a/index.scss
+++ b/index.scss
@@ -47,6 +47,7 @@
             box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
             border-radius: 6px;
             padding: 8px;
+            cursor: pointer;
             // margin: 0 8px;
             img{
                 width: 100%;
